--- a/.github/hosts.yml
+++ b/.github/hosts.yml
@@ -5,7 +5,7 @@ master:
   hostname: dev1.rt.gw
 
   # user to use in deploy.
-  user: root
+  user: www-data
 
   # branch name
   stage: master
@@ -26,7 +26,7 @@ develop:
   hostname: dev1.rt.gw
 
   # user to use in deploy.
-  user: root
+  user: www-data
 
   # branch name
   stage: develop
