--- a/.github/hosts.yml
+++ b/.github/hosts.yml
@@ -1,10 +1,10 @@
-# GH branch name
+# Github branch name for production environment
 master:
 
-  # server to deploy this branch.
-  hostname: dev1.rt.gw
+  # Server hostname or IP address for deployment
+  hostname: prod.example.host
 
-  # user to use in deploy.
+  # SSH user to be used in deployment
   user: www-data
 
   # branch name
@@ -19,21 +19,12 @@ master:
     UserKnownHostsFile: /dev/null
     StrictHostKeyChecking: no
 
-# GH branch name
+# Github branch name for dev environment
 develop:
-
-  # server to deploy this branch.
-  hostname: dev1.rt.gw
-
-  # user to use in deploy.
   user: www-data
-
-  # branch name
+  hostname: dev1.rt.gw
   stage: develop
   deploy_path: /opt/easyengine/sites/develop-ci.dev1.rt.gw/app/htdocs
-
-  # Setting these options because of ssh-issues in GH actions.
-  # Should not be needed in future, hopefully :fingers-crossed:
   sshOptions:
     UserKnownHostsFile: /dev/null
     StrictHostKeyChecking: no
