--- a/.github/hosts.yml
+++ b/.github/hosts.yml
@@ -1,36 +1,18 @@
-# Github branch name for production environment
+# Environment name which should equal to Git branch name
 master:
-
-  # Server hostname or IP address for deployment
-  hostname: prod.example.host
 
   # SSH user to be used in deployment
   user: www-data
 
-  # branch name
-  stage: master
+  # Server hostname or IP address for deployment
+  hostname: prod.example.com
   
   # Path to deploy.
-  deploy_path: /opt/easyengine/sites/ci.dev1.rt.gw/app/htdocs
+  deploy_path: /opt/easyengine/sites/prod.example.com/app/htdocs
 
-  # Setting these options because of ssh-issues in GH actions.
-  # Should not be needed in future, hopefully :fingers-crossed:
-  sshOptions:
-    UserKnownHostsFile: /dev/null
-    StrictHostKeyChecking: no
 
-# Github branch name for dev environment
+# Another environment. You can have as many as possible
 develop:
   user: www-data
-  hostname: dev1.rt.gw
-  stage: develop
-  deploy_path: /opt/easyengine/sites/develop-ci.dev1.rt.gw/app/htdocs
-  sshOptions:
-    UserKnownHostsFile: /dev/null
-    StrictHostKeyChecking: no
-
-# Deploy Script options
-ci_script_options:
-  vip: false
-  wp-version: latest
-  slack-channel: test
+  hostname: dev.example.com
+  deploy_path: /opt/easyengine/sites/dev.example.com/app/htdocs
