Add WP_VERSION in template

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,7 @@ jobs:
       env:
         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        WP_VERSION: 5.3
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@master
       env:
