Update secrets in plugin update with vault secrets
Signed-off-by: Riddhesh Sanghvi <riddhesh237@gmail.com>

--- a/.github/workflows/plugin_update_every_week.yml
+++ b/.github/workflows/plugin_update_every_week.yml
@@ -13,5 +13,6 @@ jobs:
     - name: WP plugin auto update
       uses: docker://rtcamp/action-plugin-update:master
       env:
-        WP_BOT_TOKEN: ${{ secrets.WP_BOT_TOKEN }}
         REFERENCE_BRANCH: "develop"
+        VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+        VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
