--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Deploy
-      uses: docker://rtcamp/action-deploy-wordpress:master
+      uses: rtCamp/action-deploy-wordpress@master
       env:
         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
         WP_VERSION: 5.3.2
     - name: Slack Notification
-      uses: docker://rtcamp/action-slack-notify:master
+      uses: rtCamp/action-slack-notify@master
       env:
         SLACK_CHANNEL: test
         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
