--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -3,7 +3,7 @@ name: Inspections
 jobs:
   runPHPCSInspection:
     name: Run PHPCS inspection
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
       with:
