--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -3,6 +3,7 @@ name: Inspections
 jobs:
   runPHPCSInspection:
     name: Run PHPCS inspection
+    # Change below line to: `runs-on: ubuntu-latest` if not using self-hosted runners or if it is a public repo.
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
