Add cleanup action for all workflows
Signed-off-by: Riddhesh Sanghvi <riddhesh237@gmail.com>

--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -24,3 +24,5 @@ jobs:
         SLACK_CHANNEL: test
         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+    - name: Cleanup
+      uses: rtCamp/action-cleanup@master
