--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -17,3 +17,5 @@ jobs:
         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
       with:
         args: WordPress,WordPress-Core,WordPress-Docs
+    - name: Cleanup
+      uses: rtCamp/action-cleanup@master
