Run cleanup always
Signed-off-by: Riddhesh Sanghvi <riddhesh237@gmail.com>

--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -25,4 +25,5 @@ jobs:
         VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
     - name: Cleanup
+      if: ${{ always() }}
       uses: rtCamp/action-cleanup@master
