--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -18,4 +18,5 @@ jobs:
       with:
         args: WordPress,WordPress-Core,WordPress-Docs
     - name: Cleanup
+      if: ${{ always() }}
       uses: rtCamp/action-cleanup@master
