Switch from master to main branch
Signed-off-by: Riddhesh Sanghvi <riddhesh237@gmail.com>

--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -1,8 +1,8 @@
-on: 
-  push: 
-    branches: 
-      - master 
-      - develop 
+on:
+  push:
+    branches:
+      - main
+      - develop
 
 name: Deploy and Slack Notification
 jobs:
