Add new site for testing wp deploy action

--- a/.github/hosts.yml
+++ b/.github/hosts.yml
@@ -16,3 +16,8 @@ develop:
   user: www-data
   hostname: dev.example.com
   deploy_path: /opt/easyengine/sites/dev.example.com/app/htdocs
+
+test/action-deploy-wp:
+  user: www-data
+  hostname: action-wp-test.dev1.rt.gw
+  deploy_path: /opt/easyengine/sites/action-wp-test.dev1.rt.gw/app/htdocs
