--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -13,6 +13,7 @@ jobs:
       uses: rtCamp/action-phpcs-code-review@master
       env:
         SKIP_FOLDERS: "tests,.github"
+        PHPCS_SNIFFS_EXCLUDE: "WordPress.Files.FileName"
         GH_BOT_TOKEN: ${{ secrets.RTBOT_TOKEN }}
       with:
         args: WordPress,WordPress-Core,WordPress-Docs
