--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -4,7 +4,7 @@ jobs:
   runPHPCSInspection:
     name: Run PHPCS inspection
     # Change below line to: `runs-on: ubuntu-latest` if not using self-hosted runners or if it is a public repo.
-    runs-on: rt.gw
+    runs-on: high-performance
     steps:
     - uses: actions/checkout@v2
       with:
