--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -16,7 +16,7 @@ jobs:
       uses: rtCamp/action-deploy-wordpress@master
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        WP_VERSION: 6.4.2
+        WP_VERSION: latest
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@master
       env:
