Update SSH key for ED

--- a/.github/workflows/deploy_on_push.yml
+++ b/.github/workflows/deploy_on_push.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Deploy
       uses: rtCamp/action-deploy-wordpress@master
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SSH_PRIVATE_KEY: ${{ secrets.ED_DEPLOYMENT_KEY }}
         WP_VERSION: latest
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@master
